# agent-teams-mcp

./: README.md  opencode_json.txt  pyproject.toml
src/agent_teams/: messaging.py  models.py  opencode_client.py  server.py  spawner.py  tasks.py  teams.py
